--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            background: url('yuvan.jpg') no-repeat center top;
+            background-size: cover;
+        }
+    </style>
 </head>
 
-<body>
-    Rahman Radio
+<body></body>
 </body>
 
 </html>
